# Synteticdatagen

./: .env.example  .gitignore  API_USAGE.md  DESIGN.md  PRODUCT.md  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  setup-production.sh  syngen.py  test_syngen.py  vercel.json  wsgi.py
api/: __init__.py  app.py  auth.py  models.py
cli/: __init__.py  main.py
core/: __init__.py  engine.py  kaggle_client.py  schema.py  schema_learner.py
core/generators/: __init__.py  base.py  boolean.py  callcenter.py  common.py  datetime.py  demographics.py  numeric.py  text.py
examples/: api_test.py  example_usage.sh  integrate_example.py
formatters/: __init__.py  csv_formatter.py  json_formatter.py  sql_formatter.py
nginx/: synthgenapp.dev-http.conf  synthgenapp.dev.conf
systemd/: synthgen-api.service  synthgen-web.service
web/: README.md  app.py  config.py  crypto_utils.py  forms.py  models.py
web/blueprints/: api_docs.py  auth.py  generator.py  main.py
web/static/css/: style.css
web/templates/: base.html  dashboard.html  developers.html  index.html  pricing.html
web/templates/auth/: login.html  profile.html  register.html
web/templates/docs/: authentication.html  endpoints.html  examples.html  index.html
web/templates/generator/: history.html  index.html
