[project]
name = "syngen"
version = "1.0.0"
description = "Free open-source synthetic data generator (CLI, REST API, web UI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "faker>=18.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.40.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.0",
    "flask-limiter>=3.5.0",
    "werkzeug>=3.0.0",
    "email-validator>=2.0.0",
    "gunicorn>=21.0.0",
    "cryptography>=42.0.0",
    "psycopg2-binary>=2.9.9",
]

[tool.vercel]
# Shared entrypoint also used by Railway (see railway.toml / wsgi.py)
entrypoint = "wsgi:app"
# Vercel prefers pyproject.toml over requirements.txt when both exist.
# Dependencies MUST be listed above or the function crashes with
# FUNCTION_INVOCATION_FAILED (Flask never installed).
